--- a/第3章_中国秦律.md
+++ b/第3章_中国秦律.md
@@ -1,18 +1,18 @@
 ---
 layout: default
-title: 第3章：中国秦律 - 严到让百姓闻风丧胆的法律，到底有多狠？⚰️
+title: 第3章：中国秦律 - 严到让百姓闻风丧胆的法律，到底有多狠？
 ---
 
-# 第3章：中国秦律 - 严到让百姓闻风丧胆的法律，到底有多狠？⚰️
+# 第3章：中国秦律 - 严到让百姓闻风丧胆的法律，到底有多狠？
 
-## 🎧 收听本章播客
+## 收听本章播客
 
 <audio controls style="width: 100%; max-width: 600px; margin: 20px 0;">
   <source src="{{ '/podcast/第3章_中国秦律.mp3' | relative_url }}" type="audio/mpeg">
   您的浏览器不支持音频播放，请<a href="{{ '/podcast/第3章_中国秦律.mp3' | relative_url }}">下载音频文件</a>。
 </audio>
 
-## 💥 开头故事：一个农民的悲剧
+## 开头故事：一个农民的悲剧
 
 公元前219年的某个清晨，咸阳城的刑场异常热闹。
 
@@ -26,7 +26,7 @@ title: 第3章：中国秦律 - 严到让百姓闻风丧胆的法律，到底有
 
 这只是秦朝法律无数残酷案例中的一个普通例子。秦朝的法律严苛到什么程度？连睡懒觉、扔垃圾都可能被处死！
 
-## 🏛️ 背景：为什么秦国需要这么狠的法律？
+## 背景：为什么秦国需要这么狠的法律？
 
 ### 春秋战国的"乱世混战"
 
@@ -63,7 +63,7 @@ title: 第3章：中国秦律 - 严到让百姓闻风丧胆的法律，到底有
 
 秦始皇相信：只有用最严厉的法律，才能让天下臣服。
 
-## ⚖️ 秦律有多狠？让你毛骨悚然的处罚方式
+## 秦律有多狠？让你毛骨悚然的处罚方式
 
 ### 死刑的"创意套餐"
 
@@ -104,7 +104,7 @@ title: 第3章：中国秦律 - 严到让百姓闻风丧胆的法律，到底有
 
 想象一下：你的邻居偷了东西，结果你也被抓去服劳役！
 
-## 🔍 秦律管得多宽？连你吃饭睡觉都管！
+## 秦律管得多宽？连你吃饭睡觉都管！
 
 ### 日常生活被法律绑架
 
@@ -141,7 +141,7 @@ title: 第3章：中国秦律 - 严到让百姓闻风丧胆的法律，到底有
 - **禁止私人藏书**：除了法家经典，其他书都要烧掉
 - **禁止议论朝政**：批评皇帝要处死
 
-## 🌍 历史影响：严刑峻法的双面性
+## 历史影响：严刑峻法的双面性
 
 ### 积极影响：为什么严刑峻法能统一中国？
 
@@ -172,7 +172,7 @@ title: 第3章：中国秦律 - 严到让百姓闻风丧胆的法律，到底有
 - **思想不能禁锢**：文化需要多样性
 - **法律要人性化**：法律应该保护人民，不是压迫人民
 
-## 🎯 现代联系：我们还能看到秦律的影子吗？
+## 现代联系：我们还能看到秦律的影子吗？
 
 ### 现代法律的"秦朝基因"
 
@@ -200,7 +200,7 @@ title: 第3章：中国秦律 - 严到让百姓闻风丧胆的法律，到底有
 | 不孝要处死 | 赡养父母是道德义务，不构成犯罪 |
 | 议论朝政要处死 | 言论自由是基本权利 |
 
-## 🎪 趣味知识：关于秦律的冷知识
+## 趣味知识：关于秦律的冷知识
 
 ### 1. 秦律的"法律百科全书"
 
@@ -226,7 +226,7 @@ title: 第3章：中国秦律 - 严到让百姓闻风丧胆的法律，到底有
 
 秦朝的法律制度对周边国家产生了深远影响，日本、朝鲜、越南等国的古代法律都能看到秦律的影子。
 
-## 🤔 思考问题
+## 思考问题
 
 1. **法律与人道**：法律应该严厉到什么程度？严厉的法律真的能减少犯罪吗？
 
