--- a/第4章_大宪章.md
+++ b/第4章_大宪章.md
@@ -1,18 +1,18 @@
 ---
 layout: default
-title: 第4章：大宪章 - 国王也要守规矩！贵族们用一张纸制服了暴君👑
+title: 第4章：大宪章 - 国王也要守规矩！贵族们用一张纸制服了暴君
 ---
 
-# 第4章：大宪章 - 国王也要守规矩！贵族们用一张纸制服了暴君👑
+# 第4章：大宪章 - 国王也要守规矩！贵族们用一张纸制服了暴君
 
-## 🎧 收听本章播客
+## 收听本章播客
 
 <audio controls style="width: 100%; max-width: 600px; margin: 20px 0;">
   <source src="{{ '/podcast/第4章_大宪章.mp3' | relative_url }}" type="audio/mpeg">
   您的浏览器不支持音频播放，请<a href="{{ '/podcast/第4章_大宪章.mp3' | relative_url }}">下载音频文件</a>。
 </audio>
 
-## 💥 开头故事：泰晤士河畔的生死对峙
+## 开头故事：泰晤士河畔的生死对峙
 
 1215年6月15日，伦敦西郊的兰尼米德草地。
 
@@ -26,7 +26,7 @@ title: 第4章：大宪章 - 国王也要守规矩！贵族们用一张纸制服
 
 "从今天起，国王不再是法律的主人，而是法律的仆人。"贵族们庄严宣告。
 
-## 🏛️ 背景：约翰王——史上最糟糕的国王？
+## 背景：约翰王——史上最糟糕的国王？
 
 ### 约翰王的"黑历史"
 
@@ -62,7 +62,7 @@ title: 第4章：大宪章 - 国王也要守规矩！贵族们用一张纸制服
 
 但约翰王完全无视这些传统，他想做绝对的专制君主。
 
-## ⚖️ 大宪章的诞生：一场"宪法革命"
+## 大宪章的诞生：一场"宪法革命"
 
 ### 武装起义的准备
 
@@ -107,7 +107,7 @@ title: 第4章：大宪章 - 国王也要守规矩！贵族们用一张纸制服
 4. **司法独立**：司法不应受国王干预
 5. **自由权利**：保障个人自由权利
 
-## 🔍 大宪章的命运：被撕毁又重生
+## 大宪章的命运：被撕毁又重生
 
 ### 约翰王的背叛
 
@@ -132,7 +132,7 @@ title: 第4章：大宪章 - 国王也要守规矩！贵族们用一张纸制服
 
 从此，大宪章成为英国法律的一部分，再也没有被废除过！
 
-## 🌍 历史影响：为什么大宪章如此重要？
+## 历史影响：为什么大宪章如此重要？
 
 ### 宪政制度的起源
 
@@ -161,7 +161,7 @@ title: 第4章：大宪章 - 国王也要守规矩！贵族们用一张纸制服
 - **联合国宪章**：现代国际人权法也看到了大宪章的影子
 - **世界各国**：几乎所有现代宪法都有大宪章的基因
 
-## 🎯 现代联系：大宪章还活着吗？
+## 现代联系：大宪章还活着吗？
 
 ### 大宪章的现代传承
 
@@ -190,7 +190,7 @@ title: 第4章：大宪章 - 国王也要守规矩！贵族们用一张纸制服
 - **倡法治**：坚持法治原则，反对人治
 - **求公正**：追求社会公正和程序正义
 
-## 🎪 趣味知识：关于大宪章的冷知识
+## 趣味知识：关于大宪章的冷知识
 
 ### 1. 大宪章原件在哪里？
 
@@ -226,7 +226,7 @@ title: 第4章：大宪章 - 国王也要守规矩！贵族们用一张纸制服
 
 英国把6月15日定为"大宪章日"，用来纪念这个伟大的历史事件。2015年是大宪章签署800周年，英国举行了盛大的庆祝活动。
 
-## 🤔 思考问题
+## 思考问题
 
 1. **权力与法律**：在今天这个时代，我们还需要"大宪章"吗？权力是否应该受到制约？
 
