--- a/第2章_古罗马十二铜表法.md
+++ b/第2章_古罗马十二铜表法.md
@@ -1,18 +1,18 @@
 ---
 layout: default
-title: 第2章：古罗马十二铜表法 - 贵族气疯了！法律居然要让平民看懂？📜
+title: 第2章：古罗马十二铜表法 - 贵族气疯了！法律居然要让平民看懂？
 ---
 
-# 第2章：古罗马十二铜表法 - 贵族气疯了！法律居然要让平民看懂？📜
+# 第2章：古罗马十二铜表法 - 贵族气疯了！法律居然要让平民看懂？
 
-## 🎧 收听本章播客
+## 收听本章播客
 
 <audio controls style="width: 100%; max-width: 600px; margin: 20px 0;">
   <source src="{{ '/podcast/第2章_古罗马十二铜表法.mp3' | relative_url }}" type="audio/mpeg">
   您的浏览器不支持音频播放，请<a href="{{ '/podcast/第2章_古罗马十二铜表法.mp3' | relative_url }}">下载音频文件</a>。
 </audio>
 
-## 💥 开头故事：平民的愤怒抗议
+## 开头故事：平民的愤怒抗议
 
 公元前451年的某个黄昏，罗马广场上聚集了成千上万的平民。
 
@@ -26,7 +26,7 @@ title: 第2章：古罗马十二铜表法 - 贵族气疯了！法律居然要让
 
 这场抗议最终催生了世界上第一部"公开透明"的法律——**十二铜表法**。
 
-## 🏛️ 背景：贵族vs平民的阶级斗争
+## 背景：贵族vs平民的阶级斗争
 
 ### 罗马共和国的"阶级矛盾"
 
@@ -58,7 +58,7 @@ title: 第2章：古罗马十二铜表法 - 贵族气疯了！法律居然要让
 
 但法律问题还是没有解决。贵族们仍然把法律当作秘密武器。
 
-## ⚖️ 十二铜表法的诞生：史上第一次"法律公开"
+## 十二铜表法的诞生：史上第一次"法律公开"
 
 ### 历史性的决定
 
@@ -133,7 +133,7 @@ title: 第2章：古罗马十二铜表法 - 贵族气疯了！法律居然要让
 - 对前面各表的补充
 - 执行程序
 
-## 🔍 法律特点：既有进步性，也有局限性
+## 法律特点：既有进步性，也有局限性
 
 ### 伟大的进步性
 
@@ -162,7 +162,7 @@ title: 第2章：古罗马十二铜表法 - 贵族气疯了！法律居然要让
 - **第四表第1条**：婴儿畸形者应立即处死。
 - **第八表第21条**：如果监护人欺骗被监护人，则应被剥夺监护权。
 
-## 🌍 深远影响：西方法律的"老祖宗"
+## 深远影响：西方法律的"老祖宗"
 
 ### 罗马法的奠基石
 
@@ -193,7 +193,7 @@ title: 第2章：古罗马十二铜表法 - 贵族气疯了！法律居然要让
 - **公证制度**：罗马的文书认证制度
 - **破产制度**：关于债务清偿的规定
 
-## 🎯 现代联系：为什么说我们都是"罗马人"？
+## 现代联系：为什么说我们都是"罗马人"？
 
 ### 法律思维的罗马基因
 
@@ -223,7 +223,7 @@ title: 第2章：古罗马十二铜表法 - 贵族气疯了！法律居然要让
 - **十二铜表法**：妇女不得参与政治事务。
 - **现代法律**：男女平等，妇女享有完全的政治权利。
 
-## 🎪 趣味知识：关于十二铜表法的冷知识
+## 趣味知识：关于十二铜表法的冷知识
 
 ### 1. 铜板去哪了？
 
@@ -249,7 +249,7 @@ title: 第2章：古罗马十二铜表法 - 贵族气疯了！法律居然要让
 
 后来贵族们还是找机会报复了。在第二年，他们强行增加了两条偏袒贵族的法律，把平民的婚姻限制在本阶层内，防止平民与贵族通婚提升地位。
 
-## 🤔 思考问题
+## 思考问题
 
 1. **透明度讨论**：如果今天的法律条文普通人也看不懂，是不是和古罗马的情况有相似之处？
 
